--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "description": "A Lightweight 2D game engine using WebGL2. The engine is designed on the focus of creating a bridge between creating and publishing games to the Seed Network as modules.",
     "main": "./src/Engine.js",
     "scripts": {
-        "test": "test"
+        "test": "node test/run.js",
+        "version": "./node_modules/.bin/esdoc -c ./esdoc.json",
     },
     "repository": {
         "type": "git",
