Simple testing library. Users may create a new test in the ./test/tests/ directory and add steps to their test.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "./src/Engine.js",
     "scripts": {
         "test": "node test/run.js",
-        "version": "./node_modules/.bin/esdoc -c ./esdoc.json",
+        "version": "./node_modules/.bin/esdoc -c ./esdoc.json"
     },
     "repository": {
         "type": "git",
