--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "A Lightweight 2D game engine using WebGL2. The engine is designed on the focus of creating a bridge between creating and publishing games to the Seed Network as modules.",
     "main": "./src/entry.js",
     "scripts": {
-        "test": "node test/run.js",
+        "test": "webpack-dev-server",
         "version": "./node_modules/.bin/esdoc -c ./esdoc.json"
     },
     "repository": {
@@ -24,6 +24,11 @@
     "homepage": "https://github.com/JaegarSarauer/SeedGameEngine#readme",
     "devDependencies": {
         "esdoc": "^1.1.0",
-        "esdoc-standard-plugin": "^1.0.0"
+        "esdoc-standard-plugin": "^1.0.0",
+        "webpack-cli": "^3.0.6"
+    },
+    "dependencies": {
+        "webpack": "^4.12.0",
+        "webpack-dev-server": "^3.1.4"
     }
 }
