--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "seed-engine",
     "version": "1.1.0",
     "description": "A Lightweight 2D game engine using WebGL2. The engine is designed on the focus of creating a bridge between creating and publishing games to the Seed Network as modules.",
-    "main": "./src/entry.js",
+    "main": "src/entry.js",
     "scripts": {
         "test": "webpack-dev-server",
         "version": "./node_modules/.bin/esdoc -c ./esdoc.json"
