--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "seed-engine",
-    "version": "1.1.8",
+    "version": "1.1.9",
     "description": "A Lightweight 2D game engine using WebGL2. The engine is designed on the focus of creating a bridge between creating and publishing games to the Seed Network as modules.",
     "main": "src/entry.js",
     "scripts": {
@@ -28,6 +28,7 @@
         "webpack-cli": "^3.0.6"
     },
     "dependencies": {
+        "canvas": "^2.2.0",
         "webpack": "^4.12.0",
         "webpack-dev-server": "^3.1.10"
     }
